--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
 		
 		
 		<footer>
-			<p>Code with <span class="heart">&hearts;</span> by Amy Kwok &copy; 2018</p>
+			<p>Code with <span class="heart">&hearts;</span> by Amy Kwok</p>
 			<p>Layout by <a href="https://dribbble.com/shots/1239114-Pok-dex-App?comments_sort=newest" target="_blank" style="text-decoration: none;">Jake Moore</a> on Dribble</p>
-			<p>Started on July 20, 2018</p>
 		</footer>
 		
 		
